# watcher-knight

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ruff.toml
.github/workflows/: ci.yml  publish.yml
.pyre/: pyre.stderr
example/: backend.py  frontend.ts
examples/: backend.py  frontend.ts
src/: cache.rs  claude.rs  cli.rs  lib.rs  main.rs  marker.rs  prompt.rs
tests/: integration.rs
